[gd_scene load_steps=4 format=3 uid="uid://c8wvcvhe4eu1a"]

[ext_resource type="Texture2D" uid="uid://4a50lpq2ndjb" path="res://Assets/ConnectorIn.tres" id="1_sqkto"]
[ext_resource type="Script" path="res://Scripts/connector_point.gd" id="2_5pywc"]

[sub_resource type="LabelSettings" id="LabelSettings_tqlru"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="ConnectorPoint" type="Button"]
z_index = 2
texture_filter = 1
offset_left = -21.0
offset_top = -21.0
offset_right = 22.0
offset_bottom = 22.0
focus_mode = 0
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
action_mode = 0
icon = ExtResource("1_sqkto")
flat = true
script = ExtResource("2_5pywc")

[node name="Line2D" type="Line2D" parent="."]
visible = false
z_index = -1
points = PackedVector2Array(34, 21, 59, 21)
width = 14.5
begin_cap_mode = 1
end_cap_mode = 1
round_precision = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -49.0
offset_right = 9.0
offset_bottom = 40.0
text = "Output"
label_settings = SubResource("LabelSettings_tqlru")
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
